# scrape-app

./: README.md  pyproject.toml
scrape_app/: result.json  scraper.py  server.py
scrape_app/scripts/: server.py
