[tool.poetry]
name = "scrape-app"
version = "0.1.0"
description = "An app for scraping the information"
authors = ["Dddarknight <9801677@gmail.com>"]
packages = [
  { include = "scrape_app" },
]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scrape-app = "scrape_app.scripts.server:main"
